# bolio

./: .gitignore  README.md
bolio-java/: pom.xml
bolio-rust/: .env  Cargo.toml  diesel.toml
bolio-rust/migrations/2025-01-19-093949_create_users/: down.sql  up.sql
bolio-rust/src/: audio_transcription.rs  frontend.main.rs  main copy.rs  main.rs  models.rs  page_handler.rs  schema.rs  signin_handler.rs  signout_handler.rs  signup_handler.rs  template_handler.rs  upload_handler.rs  users.rs  video2text_handler.rs
bolio-rust/src/backup/: audio_transcription.rs
bolio-rust/src/middlewares/: session.rs
bolio-rust/static/css/: bolio.css
bolio-rust/static/js/: bolio.js
bolio-rust/templates/: base.html  index.html  signin.html  signup.html  video2text.html
edinburgh.vibes/: about.html  contact.html
edinburghvibes/: .gitignore  Cargo.toml
edinburghvibes/src/: main.rs
edinburghvibes/static/: about.html  contact.html  index.html
edinburghvibes/static/gallery/: images.json
video2text/: .env  Cargo.toml  actix_app  actix_app.backup  config.json  diesel.toml
video2text/src/: add_credit_handler.rs  audio_transcription.rs  index_handler.rs  lib.rs  main.rs  models.rs  progress_updater.rs  signout_handler.rs  signup_handler.rs  video2text_handler.rs  websocket_handler.rs
video2text/templates/: add_credit.html  index.html  signin.html  signup.html  video2text.backup.html  video2text.html
website/: Cargo.toml
website/src/: animations.js  main.rs
website/static/: index.html  output.css
website/templates/: index.html
(+14 files in other folders)
