[package]
name = "bolio-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
A2VConverter = "0.1.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
anyhow = "1.0.95"
askama = "0.12.1"
futures-util = "0.3.31"
hound = "3.5.1"
mp4parse = "0.17.0"
sanitize-filename = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
symphonia = "0.5.4"
whisper-rs = "0.13.2"
