[package]
name = "bolio-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
A2VConverter = "0.1.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
anyhow = "1.0.95"
askama = "0.12.1"
bcrypt = "0.16.0"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.6", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
hound = "3.5.1"
mp4parse = "0.17.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
regex = "1.11.1"
sanitize-filename = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.137"
symphonia = "0.5.4"
uuid = {version = "1.12.0"  , features = ["v4"]}
whisper-rs = "0.13.2"
